--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/Yokeshthirumoorthi/postgres-wisconsin-benchmark/issues"
   },
-  "homepage": "https://github.com/Yokeshthirumoorthi/postgres-wisconsin-benchmark#readme"
+  "homepage": "https://github.com/Yokeshthirumoorthi/postgres-wisconsin-benchmark#readme",
+  "dependencies": {
+    "pg": "^7.10.0"
+  }
 }
