--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "aerospike": "node aerospike",
+    "postgres": "node postgres",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
